--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://haree123.github.io/Typescript-notes-app/",
   "name": "notes-app-ts",
   "private": true,
   "version": "0.0.0",
